<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="uno.watershedsprint1.LoginActivity"
    android:weightSum="1"
    android:background="@color/backgroundPrimary">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/nwnlogo_transparent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_first_name"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_last_name"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/prompt_email"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp" />



    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_address"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:inputType="textPostalAddress"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_city"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:inputType="textPostalAddress"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_state"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:inputType="textPostalAddress"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/zip"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_zip"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:inputType="textPostalAddress"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/affiliation"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_affiliation"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:inputType="text"
        android:layout_marginTop="8dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:layout_marginTop="8dp" />


    <EditText
        android:id="@+id/verify_password"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:hint="@string/hint_verify_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"

        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_box"
        android:layout_marginTop="8dp" />




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUp"
        android:layout_gravity="center_horizontal"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="23dp"
        android:textIsSelectable="false"
        android:backgroundTint="@color/backgroundPrimary"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/SignInExplain"
        android:id="@+id/textView22"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_marginTop="8dp"/>


</LinearLayout>
</ScrollView>
</LinearLayout>