<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uno.watershedsprint1.StepSixActivity"
    android:background="@color/backgroundPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AAstepSixTop"
        android:id="@+id/textView16"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="27dp"
        android:textColor="#FFFFFF" />
    <ImageView
        android:src="@android:drawable/ic_menu_camera"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView2"
        android:adjustViewBounds="true"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AAbuttonTakePicture"
        android:id="@+id/takePicture2"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_box"
        android:textColor="@color/backgroundPrimary"
        android:textSize="21dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/takePicture2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AAradioPositive"
            android:id="@+id/radioButton3"
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:textSize="20dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:checked="false"
            android:text="@string/AAradioNegative"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:buttonTint="#FFFFFF" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AAradioInvalidUnsure"
            android:id="@+id/radioButton5"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

    </RadioGroup>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AAbuttonSubmit"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:textSize="27dp"
        android:onClick="onClickToStepCongrats"
        android:textColor="@color/backgroundPrimary"
        android:background="@drawable/rounded_box" />
</RelativeLayout>
