<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context="uno.watershedsprint1.emailActivity"
    android:background="@color/backgroundPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AAemailTop"
        android:id="@+id/textView21"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/emailText"
        android:background="@drawable/rounded_box"
        android:hint="@string/AAemailHint"
        android:layout_below="@+id/textView21"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AAbuttonSend"
        android:id="@+id/sendEmailButton1"
        android:textSize="21dp"
        android:textColor="@color/backgroundPrimary"
        android:background="@drawable/rounded_box"
        android:layout_below="@+id/emailText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />



    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AAbuttonHome"
        android:id="@+id/button13"
        android:textSize="21dp"
        android:textColor="@color/backgroundPrimary"
        android:background="@drawable/rounded_box"
        android:layout_alignParentBottom="true"
        android:onClick="onClickToHomePage"
        android:layout_alignLeft="@+id/sendEmailButton1"
        android:layout_alignStart="@+id/sendEmailButton1" />
</RelativeLayout>
