<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uno.watershedsprint1.StepOneActivity"
    android:background="@color/backgroundPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:text="@string/AAstepOneTop"
        android:textSize="27dp"
        android:textColor="#FFFFFF" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/testStripBasic"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/test_strip"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AAatrazineTestStrips"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:textSize="27dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/vials_clearback1"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AAvialsLable"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textSize="27dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/AAnextStep"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="21dp"
        android:onClick="onClickToStepTwo"
        android:background="@drawable/rounded_box"
        android:textColor="@color/backgroundPrimary" />
</LinearLayout>
