<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uno.watershedsprint1.WizardStart"
    android:background="@color/backgroundPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AAwizardStartTop"
        android:id="@+id/textView17"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textSize="45dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AAwizardStartExplain"
        android:id="@+id/textView18"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="27dp" />

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/AAbuttonStartTutorial"
        android:id="@+id/button7"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:textColor="@color/backgroundPrimary"
        android:onClick="onClickToStepOne"
        android:textSize="23dp"
        android:background="@drawable/rounded_box" />
</RelativeLayout>
