<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundPrimary">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"



        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AAnewStepFourTop"
            android:id="@+id/textView5"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AAnewStepFourExplain"
            android:id="@+id/textView23"
            android:textSize="24dp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_marginTop="25dp" />

        <ImageView
            android:layout_width="237dp"
            android:layout_height="195dp"
            android:id="@+id/imageView5"
            android:src="@drawable/test_strip_in_vial3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />
    </LinearLayout>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    tools:context="uno.watershedsprint1.StepFourActivity">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/AAnextStep"
        android:id="@+id/button14"
        android:background="@drawable/rounded_box"
        android:layout_centerHorizontal="true"
        android:textColor="@color/backgroundPrimary"
        android:onClick="onClickToStepFive"
        android:layout_marginBottom="25dp"
        android:textSize="21dp" />
</RelativeLayout>
</FrameLayout>