<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uno.watershedsprint1.HomePage"
    android:background="@color/backgroundPrimary">

    <ImageView
        android:layout_width="147dp"
        android:layout_height="189dp"
        android:id="@+id/imageView5"
        android:src="@drawable/nwnlogo_transparent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AAtoInput"
        android:id="@+id/button3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/backgroundPrimary"
        android:background="@drawable/rounded_box"
        android:onClick="onClickToDataEntry"
        android:textSize="21dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AAtoWizard"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:textSize="21dp"
        android:onClick="onClickToWizardStart"
        android:textStyle="bold"
        android:textColor="@color/backgroundPrimary"
        android:background="@drawable/rounded_box" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AAemail"
        android:id="@+id/button12"
        android:background="@drawable/rounded_box"
        android:textColor="@color/backgroundPrimary"
        android:textSize="18dp"
        android:layout_alignParentBottom="true"
        android:onClick="onClickToEmail"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />
</RelativeLayout>
